法院組織法 1989.12.8

--- a/司法-司法組織/法院組織法.md
+++ b/司法-司法組織/法院組織法.md
@@ -1,206 +1,230 @@
-* 1 法院審判民事、刑事訴訟案件，並依法律所定，管轄非訟事件。
+* 1 本法所稱之法院，分左列三級：一、地方法院。二、高等法院。三、最高法院。
 
-* 2 法院分左列三級：一、地方法院。二、高等法院。三、最高法院。
+* 2 法院審判民事、刑事及其他法律規定之訴訟案件，並依法管轄非訟事件。
 
-* 3 地方法院審判案件，以推事一人獨任行之。但案件重大者，得以三人之合議行之。高等法院審判案件，以推事三人之合議行之。但得以推事一人行準備及調查證據程序。最高法院審判案件，以推事五人或三人之合議行之。
+* 3 地方法院審判案件，以法官一人獨任或三人合議行之。高等法院審判案件，以法官三人合議行之。最高法院審判案件，以法官五人合議行之。
 
-* 4 合議審判，以庭長充審判長；無庭長或庭長有事故時，以庭員中資深者充之。獨任審判，即以該推事行審判長之職權。
+* 4 合議審判，以庭長充審判長；無庭長或庭長有事故時，以庭員中資深者充之，資同以年長者充之。獨任審判，即以該法官行審判長之職權。
 
-* 5 推事審判訴訟案件，其事務分配及代理次序，雖有未合本法所定者，審判仍屬有效。前項規定，於非訟事件之處理準用之。
+* 5 法官審判訴訟案件，其事務分配及代理次序，雖有未合本法所定者，審判仍屬有效。前項規定，於非訟事件之處理準用之。
 
-* 6 高等法院分院及地方法院分院審判訴訟案件及處理非訟事件，準用關於各該本院之規定。但法律別有規定者，不在此限。
+* 6 高等法院分院及地方法院分院審判訴訟案件及處理非訟事件，適用關於各該本院之規定。
 
-* 7 法院之設立、廢止及管轄區域之劃分或變更，以法律定之。
+* 7 地方法院及其分院、高等法院及其分院管轄區域之劃分或變更，由司法院定之。
 
-* 8 各級法院及分院推事之員額，以法律定之。
+* 8 直轄市或縣（市）各設地方法院。但得視其地理環境及案件多寡，增設地方法院分院；或合設地方法院；或將其轄區之一部劃歸其他地方法院或其分院，不受行政區劃限制。在特定地區，因業務需要，得設專業地方法院；其組織及管轄等事項，以法律定之。
 
-* 9 縣或市各設地方法院。但其區域狹小者，得合數縣、市設一地方法院；其區域遼闊者，得設地方法院分院。
+* 9 地方法院管轄事件如左：一、民事、刑事第一審訴訟案件。但法律別有規定者，不在此限。二、其他法律規定之訴訟案件。三、法律規定之非訟事件。
 
-* 10 地方法院管轄事件如左：一、民事、刑事第一審訴訟案件。但法律別有規定者，不在此限。二、非訟事件。
+* 10 地方法院得設簡易庭，其管轄事件依法律之規定。
 
-* 11 地方法院置院長一人，由推事兼任，綜理全院行政事務。
+* 11 地方法院或其分院之類別及員額，依附表之規定。各地方法院或其分院應適用之類別及其變更，由司法院定之。
 
-* 12 地方法院推事在六人以上者，得分置民事庭、刑事庭。各庭置庭長一人，除由兼任院長之推事充任者外，餘就其他推事中遴任，監督各該庭事務，並定其分配。
+* 12 地方法院置法官，薦任第八職等至第九職等或簡任第十職等至第十一職等。
 
-* 13 地方法院分院置院長一人，由推事兼任，綜理該分院行政事務。但分院推事員額僅有一人時，不置院長，即由該推事兼理該分院行政事務。
+* 13 地方法院置院長一人，由法官兼任，簡任第十職等至第十二職等，綜理全院行政事務，但直轄市地方法院兼任院長之法官，簡任第十一職等至第十三職等。
 
-* 14 地方法院院長，得派本院推事兼行分院推事之職務。
+* 14 地方法院分設民事庭、刑事庭，其庭數視事務之繁簡定之；必要時得設專業法庭。
 
-* 15 地方法院分院管轄事件，與地方法院同。
+* 15 民事庭、刑事庭、專業法庭及簡易庭之庭長，除由兼任院長之法官兼任者外，餘由其他法官兼任，簡任第十職等至第十一職等或薦任第九職等，監督各該庭事務。曾任高等法院或其分院法官四年以上，具有簡任資格，調地方法院或其分院兼任院長或庭長之法官、法官者，簡任第十二職等至第十四職等。
 
-* 16 省或特別區域各設高等法院。但其區域遼闊者，應設高等法院分院。首都及院轄市，得設高等法院。
+* 16 地方法院設民事執行處，由法官辦理其事務，其法官在二人以上者，由一人兼任庭長，簡任第十職等至第十一職等或薦任第九職等，監督該處事務。
 
-* 17 高等法院管轄事件如左：一、關於內亂、外患及妨害國交之刑事第一審訴訟案件。二、不服地方法院及其分院第一審判決而上訴之民事、刑事訴訟案件。三、不服地方法院及其分院裁定而抗告之案件。
+* 17 地方法院設公設辯護人室，置公設辯護人，薦任第七職等至第九職等。其公設辯護人在二人以上者，置主任公設辯護人，薦任第九職等或簡任第十職等至第十一職等。
 
-* 18 高等法院置院長一人，由簡任推事兼任，綜理全院行政事務，並監督所屬行政事務。
+* 18 地方法院設觀護人室，置觀護人；觀護人在二人以上者，置主任觀護人。觀護人，薦任第七職等至第九職等；主任觀護人，薦任第九職等或簡任第十職等。
 
-* 19 高等法院分置民事庭、刑事庭，其庭數視事之繁簡定之。各庭置庭長一人，除由兼任院長之推事充任者外，餘就其他推事中遴任，監督各該庭事務並定其分配。
+* 19 地方法院設公證處；置公證人及佐理員；公證人在二人以上者，置主任公證人。公證人，薦任第七職等至第九職等；主任公證人，薦任第九職等或簡任第十職等；佐理員，委任第三職等至第五職等。
 
-* 20 高等法院分院管轄事件，與高等法院同。第十二條至第十四條之規定，於高等法院分院準用之。
+* 20 地方法院設提存所，置主任及佐理員。主任，薦任第九職等或簡任第十職等；佐理員，委任第三職等至第五職等或薦任第六職等至第八職等。前項薦任佐理員員額，不得逾同一法院佐理員總額二分之一。
 
-* 21 最高法院設於中央政府所在地。
+* 21 地方法院設登記處，置主任及佐理員。主任，薦任第九職等或簡任第十職等；佐理員，委任第三職等至第五職等或薦任第六職等至第八職等。前項薦任佐理員員額，不得逾同一法院佐理員總額二分之一。
 
-> 釋：國民政府係行憲前之舊稱，故改為中央政府，以維憲政體制。
+* 22 地方法院設書記處，置書記官長一人，薦任第九職等或簡任第十職等，承院長之命處理行政事務；書記官，委任第三職等至第五職等或薦任第六職等至第八職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導等事務，並得視業務需要分科辦事，各科科長由薦任書記官兼任，不另列等。直轄市地方法院書記官長，薦任第九職等或簡任第十職等。書記處各科並得視業務需要分股辦事，各股股長由書記官兼任，不另列等。第一項薦任書記官員額，不得逾同一法院書記官總額二分之一。
 
-* 22 最高法院管轄事件如左：一、不服高等法院及其分院第一審判決而上訴之刑事訴訟案件。二、不服高等法院及其分院第二審判決而上訴之民事、刑事訴訟案件。三、不服高等法院及其分院裁定而抗告之案件。四、非常上訴案件。
+* 23 地方法院置通譯，委任第三職等至第五職等或薦任第六職等至第八職等；技士，委任第三職等至第五職等；執達員，委任第二職等至第四職等或僱用；錄事、庭務員，均僱用。前項薦任通譯員額，不得逾同一法院通譯總額二分之一。地方法院為辦理值庭、執行、警衛、解送人犯及有關司法警察事務，置法警；法警，委任第二職等至第四職等或僱用。法警長、副法警長，委任第四職等至第五職等或薦任第六職等；其辦法，由司法院會同行政院定之。
 
-* 23 最高法院置院長一人，特任，綜理全院行政事務，並兼任推事。
+* 24 地方法院設人事室，置主任一人，薦任第八職等至第九職等，副主任一人，薦任第七職等至第九職等；必要時得依法置佐理人員。依法律規定辦理人事管理、人事查核等事項。直轄市地方法院人事室，必要時得分股辦事，由佐理人員兼任之，不另列等。事務較簡之地方法院，得僅置人事管理員，委任第五職等至薦任第七職等。
 
-* 24 最高法院分置民事庭、刑事庭，其庭數視事之繁簡定之。各庭置庭長一人，除由院長兼任者外，餘就推事中遴任，監督各該庭事務，並定其分配。
+* 25 地方法院設會計室、統計室，各置主任一人，均薦任第八職等至第九職等；必要時得依法各置佐理人員，依法律規定分別辦理歲計、會計、統計等事項。直轄市地方法院會計室、統計室，必要時得分股辦事，均由佐理人員兼任，不另列等。事務較簡之地方法院，得僅置會計員、統計員，均委任第五職等至薦任第七職等。
 
-* 25 最高法院各庭審理案件，關於法律上之見解，與本庭或他庭判決先例有異時，應由院長呈由司法院院長召集變更判例會議決定之。
+* 26 地方法院設資訊室，置主任一人，薦任第七職等至第九職等，承院長之命處理資訊室之行政事項；資訊管理師，薦任第六職等至第七職等，操作員，委任第三職等至第五職等；必要時得置設計師，薦任第六職等至第八職等，以處理資訊事項。
 
-* 26 最高法院檢察署置檢察官若干人，以一人為檢察長；其他法院及分院檢察處各置檢察官若干人，以一人為首席檢察官；其檢察官員額僅一人時，不置首席檢察官。各級檢察機關檢察官員額在六人以上者，得分組辦事，每組以一人為主任檢察官，監督各該組事務。
+* 27 地方法院分院置院長一人，由法官兼任，簡任第十職等至第十二職等，綜理該分院行政事務。
 
-> 釋：一、審檢分隸，司法行政部改為法務部，各級檢察機關，一面隸屬於法務部，一面配置於法院，而與同級法院平行。第一項明定各級檢察機關之設立。修正後之高等法院以下各級法院之檢察處，援最高法院檢察署例，機關名稱為：「法院及分院檢察處」。二、各級檢察機關事務繁簡不一，員額編制亦異，有檢察官員額多至四十人以上，每一檢察官每月配受之案件，達一百餘件者，似此情形，以檢察首長一人之力，實難收監督指揮之效。為謀補救缺失，乃增訂第二項，規定檢察官在六人以上者，得分組辦事，每組置主任檢察官一人，監督各該組事務，其職位與同級法院庭長同。
+* 28 地方法院院長，得派本院法官兼行分院法官之職務。
 
-* 27 各級檢察機關檢察官之員額，以法律定之。
+* 29 地方法院分院管轄事件，與地方法院同。
 
-> 釋：因審檢分隸，本條配合修正。
+* 30 第十一條至第二十六條規定，於地方法院分院準用之。
 
-* 28 檢察官之職權如左：一、實施偵查、提起公訴、實行公訴、協助自訴、擔當自訴及指揮刑事裁判之執行。二、其他法令所定職務之執行。
+* 31 省、直轄市或特別區域各設高等法院。但得視其地理環境及案件多寡，增設高等法院分院；或合設高等法院；或將其轄區之一部劃歸其他高等法院或其分院，不受行政區劃之限制。
 
-* 29 檢察官對於法院，獨立行其職權。
+* 32 高等法院管轄事件如左：一、關於內亂、外患及妨害國交之刑事第一審訴訟案件。二、不服地方法院及其分院第一審判決而上訴之民事、刑事訴訟案件。但法律另有規定者，從其規定。三、不服地方法院及其分院裁定而抗告之案件。四、其他法律規定之訴訟案件。
 
-* 30 檢察官於其所配置之法院管轄區域內執行職務。但遇有緊急情形時，不在此限。
+* 33 高等法院或其分院之類別及員額，依附表之規定。高等法院或其分院應適用之類別及其變更，由司法院定之。
 
-* 31 檢察官服從監督長官之命令。
+* 34 高等法院置法官，簡任第十職等至第十一職等或薦任第九職等。高等法院簡任法官，繼續服務四年以上者，簡任第十二職等至第十四職等。
 
-* 32 檢察長及首席檢察官，得親自處理所屬檢察官之事務，並得將所屬檢察官之事務，移轉所屬其他檢察官處理。
+* 35 高等法院置院長一人，由法官兼任，簡任第十三職等至第十四職等，綜理全院行政事務。
 
-* 33 推事及檢察官，應就具有左列資格之一者遴任之：一、經司法官考試及格者。二、曾在教育部認可之專科以上學校，教授主要法律科目二年以上，並著有講義，經審查合格者。三、曾任推事或檢察官者。四、在教育部認可之專科以上學校修習法律學科三年以上畢業，曾任薦任司法行政官辦理民刑事件二年以上，成績優良者。五、經律師考試及格並執行律師職務一年以上，成績優良者。六、曾任縣司法處審判官二年以上，成績優良者。七、在教育部認可之專科以上學校修習法律學科三年以上畢業，曾任最高級委任司法行政官，辦理民刑事件三年以上，成績優良者。八、在教育部認可之專科以上學校，修習法律學科三年以上畢業，曾任法院委任書記官，辦理記錄事務五年以上，成績優良者。九、在教育部認可之專科以上學校，修習法律學科三年以上畢業，曾任各縣承審員四年以上，成績優良者。十、在教育部認可之專科以上學校，修習法律學科三年以上畢業，並在律師考試實施前，曾執行律師職務三年以上，經甄別合格者。十一、在教育部認可之大學修習法律學科四年以上畢業，有法律學專門著作，經審查合格，並學習期滿者。
+* 36 高等法院分設民事庭、刑事庭，其庭數視事務之繁簡定之；必要時得設專業法庭。各庭庭長，除由兼任院長之法官兼任者外，餘由其他法官兼任，簡任第十一職等至第十三職等，監督各該庭事務。
 
-* 34 地方法院及其分院推事、地方法院及其分院檢察處檢察官，薦任；其兼任院長、庭長之推事及首席檢察官、主任檢察官，簡任或薦任。但首都及直轄市地方法院兼任院長之推事及首席檢察官，簡任。高等法院及其分院兼任院長、庭長之推事，高等法院及其分院檢察處首席檢察官、主任檢察官，簡任；推事及檢察官，簡任或薦任。最高法院推事及最高法院檢察署檢察官，簡任。
+* 37 高等法院設公設辯護人室，置公設辯護人，簡任第十職等至第十一職等或薦任第九職等；其公設辯護人在二人以上者，置主任公設辯護人，簡任第十職等至第十二職等。
 
-> 釋：一、第一項因審檢分隸，已明定地方法院及其分院檢察機關之名稱，故配合修正。並配合第二十六條第二項之增訂，增列地方法院及其分院檢察處主任檢察官官等之規定。兼任院長、庭長之推事及首席檢察官，原規定得為簡任，修正為簡任或薦任，以求與官等規定之體例配合。二、高等法院及其分院之推事、檢察官，均由地方法院資深績優之庭長、推、檢調任。原規定簡任員額有其限制，致人事管道難以暢通，故第二項予以修正。三、第三項及第四項併為一項，酌作文字修正，以求與前二項之體例配合。
+* 38 高等法院設書記處，置書記官長一人，薦任第九職等或簡任第十職等至第十一職等，承院長之命處理行政事務；書記官，委任第三職等至第五職等或薦任第七職等至第九職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導事務，並視業務需要分科辦事，各科於必要時，得再分股，均不另列等。各科科長由薦任書記官兼任；股長由委任或薦任書記官兼任，均不另列等。前項薦任書記官員額，不得逾同一法院書記官總額二分之一。
 
-* 35 初任推事、檢察官者，試署地方法院或其分院推事、地方法院或其分院檢察處檢察官，如無員缺可署時，暫以候補推事、候補檢察官分發辦事。前項試署期間為一年，期滿考績合格者，應即補實。初任推事或檢察官，除先派代外，應即依法送任用審查，銓敘合格者，於派代後六個月內，經審查其辦案書類及格，應即呈薦試署。前項審查辦案書類之規定，於薦署一年期滿實授時準用之。推事檢察官之互調辦法，由行政院會同司法院定之。
+* 39 高等法院置通譯，委任第三職等至第五職等或薦任第七職等至第九職等；技士，委任第三職等至第五職等；執達員，委任第二職等至第四職等或僱用；錄事、庭務員，均僱用。前項薦任通譯員額，不得逾同一法院通譯總額二分之一。第二十三條第三項規定，於高等法院或其分院準用之。
 
-> 釋：一、第一項因審檢分隸，已明定地方法院及其分院檢察機關之名稱，故配合修正。二、第二項不修正。三、審檢分隸後，推檢之派代及辦案書類之審查，分由司法院及司法行政部改名後之法務部辦理，故將第三項原規定之司法行政部等字樣刪除，並酌作文字修正。四、第四項不修正。
+* 40 高等法院設人事室，置主任一人，簡任第十職等，副主任一人，薦任第九職等或簡任第十職等；科員，委任第四職等至第五職等或薦任第六職等至第七職等，其中薦任科員不得逾同一法院科員總額三分之一，依法律規定辦理人事管理、人事查核等事項，並得分科辦事；科長，薦任第九職等。
 
-* 36 兼任地方法院院長之薦任推事及地方法院薦任首席檢察官，高等法院及其分院薦任推事及薦任檢察官，應就有左列資格之一者遴任之：一、曾任推事或檢察官三年以上者。二、曾任推事或檢察官，並任薦任司法行政官，合計在四年以上者。三、曾任推事或檢察官，而有第三十三條第二款資格者。
+* 41 高等法院設會計室、統計室，各置主任一人，均簡任第十職等，必要時得依法各置佐理人員，依法律規定分別辦理歲計、會計、統計等事項，並得分科辦事；科長，薦任第九職等。
 
-* 37 簡任推事或檢察官，應就有左列資格之一者遴任之：一、曾任簡任推事或檢察官一年以上，經審查合格者。二、曾任前條所定兼任院長之推事或首席檢察官、推事或檢察官四年以上者。三、曾任前條所定兼任院長之推事或首席檢察官、推事或檢察官，並任簡任司法行政官，合計在五年以上者。四、曾任前條所定兼任院長之推事或首席檢察官、推事或檢察官而有第三十三條第二款資格者。五、曾任立法委員三年以上者。
+* 42 高等法院設資訊室，置主任一人，簡任第十職等，承院長之命處理資訊室之行政事項；資訊管理師，薦任第六職等至第七職等，操作員，委任第三職等至第五職等；必要時得置科長、設計師，科長，薦任第九職等，設計師，薦任第六職等至第八職等，處理資訊事項。
 
-* 38 最高法院院長，應就有左列資格之一者遴任之：一、曾任簡任推事或檢察官五年以上者。二、曾任簡任推事或檢察官二年以上，並任簡任行政官五年以上者。三、曾任立法委員五年以上者。
+* 43 高等法院分院置院長一人，由法官兼任，簡任第十二職等至第十四職等，綜理該分院行政事務。
 
-* 39 推事、檢察官在職中不得為左列職務：一、兼任有俸給或無俸給之公職。但法律別有規定者，不在此限。二、兼營商業或其他公務員不應為之業務。
+* 44 高等法院院長得派本院法官兼行分院法官職務。
 
-* 40 實任推事，非有法定原因，並依法定程序，不得將其停職、免職、轉調或減俸。前項規定，除轉調外，於實任檢察官準用之。
+* 45 高等法院分院管轄事件，與高等法院同。
 
-* 41 推事、檢察官之俸給，適用普通公務員俸給之規定。候補推事或檢察官之津貼以命令定之。
+* 46 第三十四條至第四十二條之規定，於高等法院分院準用之。
 
-* 42 任薦任推事或檢察官十年以上而成績優異者，得以簡任職待遇。
+* 47 最高法院設於中央政府所在地。
 
-* 43 推事、檢察官任職在十五年以上，因積勞不能服務而辭職者，應給退養金。
+* 48 最高法院管轄事件如左：一、不服高等法院及其分院第一審判決而上訴之刑事訴訟案件。二、不服高等法院及其分院第二審判決而上訴之民事、刑事訴訟案件。三、不服高等法院及其分院裁定而抗告之案件。四、非常上訴案件。五、其他法律規定之訴訟案件。
 
-* 44 各級法院及分院，各置書記官長一人，書記官若干人，掌理紀錄、編案、文牘、統計及其他事務。但分院不置院長者，不置書記官長。
+* 49 最高法院員額，依附表之規定。
 
-* 45 最高法院書記官長，簡任；高等法院書記官長，薦任或簡任；高等法院分院書記官長，薦任；地方法院及其分院書記官長，薦任或委任。各級法院及分院書記官，委任或薦任。但薦任員額不得逾二分之一。
+* 50 最高法院置院長一人，特任，綜理全院行政事務，並任法官。
 
-> 釋：一、原條文四項併為二項。二、第一項規定各級法院書記官長之官等。高等法院書記官長，職責繁重，官等偏低，爰提高為薦任或簡任。地方法院及其分院書記官長改為薦任或委任，使員額較小之法院，易於羅致適當之人選。三、高等法院以下各級法院及分院之書記官，任重事繁，原規定之薦任員額過少。爰參照最高法院書記官薦任員額不得逾二分之一之規定，予以合理調整，使優秀者能安於其位。
+* 51 最高法院置法官，簡任第十三職等至第十四職等；分設民事庭、刑事庭，其庭數視事務之繁簡定之；各庭置庭長一人，除由院長兼任者外，餘由法官兼任，簡任第十四職等，監督各該庭事務。
 
-* 46 各級法院及分院書記官之員額，以命令定之。
+* 52 最高法院設書記廳，置書記官長一人，簡任第十一職等至第十三職等，承院長之命處理行政事務；書記官，委任第三職等至第五職等或薦任第七職等至第九職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導等事務，並視業務需要分科辦事，各科於必要時，得再分股。各科科長由薦任書記官兼任；股長由委任或薦任書記官兼任，均不另列等。前項薦任書記官員額，不得逾書記官總額二分之一。
 
-* 47 各級法院及分院書記官長、書記官，服從長官之命令，執行職務。書記官於法院開庭審判時執行職務者，服從審判長之命令，其隨從推事執行職務者，服從該推事之命令。前項命令，如係關於筆錄或其他文件之記載或變更，而書記官認其記載或變更為不當時得附記自己之意見。
+* 53 最高法院置通譯，薦任第七職等至第九職等或委任第三職等至第五職等；技士，委任第三職等至第五職等；執達員，委任第二職等至第四職等或僱用；錄事、庭務員，均僱用。前項薦任通譯員額，不得逾通譯總額二分之一。第二十三條第三項之規定，於最高法院準用之。
 
-* 48 委任書記官長、書記官，應就具有左列資格之一者任用之：一、經法院書記官考試及格者。二、曾任委任書記官長、書記官者。三、曾任委任司法行政官者。四、曾任縣司法處書記官二年以上者。五、在教育部認可之專科以上學校，修習法律、政治、經濟、社會、監獄各學科畢業者。六、現充法院或司法行政機關雇員，繼續服務三年以上，成績優良者，但初任人員，不得任為各級法院委任書記官長。薦任書記官長、書記官，應就具有左列資格之一者任用之：一、曾任薦任書記官長、書記官者。二、曾任薦任司法官或薦任司法行政官者。三、曾任最高級之委任書記官長、書記官或委任司法行政官三年以上者。四、在教育部認可之專科以上學校修習法律、政治、經濟、社會、監獄各學科畢業，經高等考試及格者。五、在教育部認可之大學，修習法律、政治、經濟、社會、監獄各學科畢業，而有專門著作，經審查合格者。簡任書記官長，非曾任薦任書記官長、書記官二年以上或具有簡任公務員之資格者，不得任用。
+* 54 最高法院設人事室，置主任一人，簡任第十職等，副主任一人，薦任第九職等或簡任第十職等；科員，委任第四職等至第五職等或薦任第六職等至第七職等，其中薦任科員不得逾總額三分之一，依法律規定辦理人事管理、人事查核等事項，並得分股辦事；股長由科員兼任，不另列等。
 
-* 49 各級檢察機關各置書記官長一人、書記官若干人，準用第四十四條至第四十八條之規定。
+* 55 最高法院設會計室、統計室，各置主任一人，均簡任第十職等；必要時得依法各置佐理人員，依法律規定分別辦理歲計、會計、統計等事項，並得分股辦事；股長由佐理人員兼任，不另列等。
 
-> 釋：因審檢分隸，檢察機關配置於法院，與同級法院平行，故本條配合修正。
+* 56 最高法院設資訊室，置主任一人，簡任第十職等，承院長之命處理資訊室之行政事項；設計師，薦任第六職等至第八職等；資訊管理師，薦任第六職等至第七職等；操作員，第三職等至第五職等，處理資訊事項。
 
-* 50 各級法院及分院與檢察機關為通譯之必要，除臨時指定者外，得置通譯，委任。但衝要地方之法院及檢察機關，其通譯得為薦任。
+* 57 最高法院之裁判，其所持法律見解，認有編為判例之必要者，應分別經由院長、庭長、法官組成之民事庭會議、刑事庭會議或民、刑事庭總會議決議後，報請司法院備查。最高法院審理案件，關於法律上之見解，認有變更判例之必要時，適用前項規定。
 
-> 釋：審檢分隸後，各級檢察機關辦理檢察事務，亦有通譯之必要，爰增列之。
+* 58 各級法院及分院各配置檢察署。
 
-* 51 高等法院以下各級法院及其分院檢察處，為檢驗屍傷，除臨時指定專門人員外，得置法醫師、檢驗員。
+* 59 各級法院及分院檢察署置檢察官，最高法院檢察署以一人為檢察總長，其他法院及分院檢察署各以一人為檢察長，分別綜理各該署行政事務。各級法院及分院檢察署檢察官員額在六人以上者，得分組辦事，每組以一人為主任檢察官，監督各該組事務。
 
-> 釋：檢驗屬於檢察業務，高等法院以下各級法院及分院檢察處均有置法醫師及檢驗員之必要，本條配合審檢分隸予以修正。
+* 60 檢察官之職權如左：一、實施偵查、提起公訴、實行公訴、協助自訴、擔當自訴及指揮刑事裁判之執行。二、其他法令所定職務之執行。
 
-* 52 地方法院及其分院置執達員，服從長官之命令，執行左列職務：一、送達文件。二、執行依法令應由執達員執行之裁判。三、其他職務上之事項。
+* 61 檢察官對於法院，獨立行使職權。
 
-* 53 各級法院及分院置相當額數之庭丁。
+* 62 檢察官於其所屬檢察署配置之法院管轄區域內執行職務。但遇有緊急情形時，不在此限。
 
-* 54 檢察官得調度司法警察；推事於辦理自訴案件時亦同。調度司法警察條例另定之。
+* 63 檢察總長依本法及其他法律之規定，指揮監督該署檢察官及高等法院以下各級法院及分院檢察署檢察官。檢察長依本法及其他法律之規定，指揮監督該署檢察官及其所屬檢察署檢察官。檢察官應服從前二項指揮監督長官之命令。
 
-* 55 司法年度，每年自一月一日起至十二月三十一日止。
+* 64 檢察總長、檢察長得親自處理其所指揮監督之檢察官之事務，並得將該事務移轉於其所指揮監督之其他檢察官處理之。
 
-* 56 各級法院及分院與檢察機關之處務規程，以命令定之。
+* 65 高等法院及地方法院檢察署檢察長，得派本署檢察官兼行其分院檢察署檢察官之職務。
 
-> 釋：因審檢分隸，本條配合修正。
+* 66 最高法院檢察署檢察總長，特任；主任檢察官，簡任第十四職等；檢察官，簡任第十三職等至第十四職等。高等法院檢察署檢察長，簡任第十三職等至第十四職等；其分院檢察署檢察長，簡任第十二職等至第十四職等。高等法院及分院檢察署主任檢察官，簡任第十一職等至第十三職等；檢察官，簡任第十職等至第十一職等或薦任第九職等；其簡任檢察官繼續服務四年以上者，簡任第十二職等至第十四職等。地方法院及分院檢察署檢察長，簡任第十職等至第十二職等；主任檢察官，簡任第十職等至第十一職等或薦任第九職等；檢察官，薦任第八職等至第九職等或簡任第十職等至第十一職等。但直轄市地方法院檢察署檢察長，簡任第十一職等至第十三職等。曾任高等法院或其分院檢察署檢察官四年以上具簡任資格，調地方法院或其分院檢察署檢察長、主任檢察官、檢察官者，簡任第十二職等至第十四職等。
 
-* 57 各級法院按照處務規程及其他法令，於每年度終會議，預定次年度司法事務之分配及代理次序。但法院僅置推事二人者，以抽籤定之。有合議審判之法院為前項會議時，並應預定次年度關於合議審判時推事之配置。
+* 67 地方法院及分院檢察署設觀護人室，置觀護人，觀護人在二人以上者，置主任觀護人。觀護人，薦任第七職等至第九職等；主任觀護人，薦任第九職等或簡任第十職等。
 
-* 58 前條會議，以院長為主席，其決議以過半數之意見定之；可否同數時，取決於主席。
+* 68 高等法院以下各級法院及其分院檢察署，置法醫師，法醫師在二人以上者，置主任法醫師。法醫師，薦任第七職等至第九職等；主任法醫師，薦任第九職等或簡任第十職等。但地方法院及其分院檢察署法醫師得列委任第五職等。高等法院以下各級法院及其分院檢察署，置檢驗員，委任第三職等至第五職等或薦任第六職等至第八職等。
 
-* 59 各級法院之分院，依第五十七條之規定，預定事務分配，代理次序或合議審判時推事之配置後，應報告於其本院。
+* 69 第二十二條、第二十三條第三項、第三十八條、第五十二條之規定，於地方法院或其分院檢察署、高等法院或其分院檢察署、最高法院檢察署分別準用之。高等法院以下各級法院及其分院檢察署，得視業務需要設執行科，掌理關於刑事執行事務；必要時，得再分股。科長由薦任書記官兼任；股長由委任或薦任書記官兼任，均不另列等。高等法院或其分院檢察署，視事務之繁簡，得設所務科，掌理關於監督看守所及少年觀護所之行政事務。置科長一人，薦任第九職等；科員，委任第四職等至第五職或薦任第六職等至第七職等；其中薦任科員員額不得逾同一檢察署科員總額三分之一，必要時並得視業務需要分股辦事；股長由薦任科員兼任，不另列等，並酌置雇員，僱用。
 
-* 60 事務分配及合議審判時推事之配置經預定後，因案件增加，推事去職或他項事故，致案件有延擱之虞者，準用前三條之規定。
+* 70 最高法院檢察署、高等法院及分院檢察署置通譯，薦任第七職等至第九職等或委任第三職等至第五職等；技士，委任第三職等至第五職等。地方法院及分院檢察署置通譯，委任第三職等至第五職等或薦任第六職等至第八職等；技士，委任第三職等至第五職等。前二項薦任通譯員額，不得逾同一檢察署通譯總額二分之一。
 
-* 61 地方法院及其分院推事遇有事故時，得由地方法院院長命候補推事代理其職務。高等法院及其分院推事遇有事故時，得由高等法院院長調用下級法院推事代理其職務。最高法院推事遇有事故時，得由最高法院院長調用下級法院推事代理其職務。
+* 71 各級法院及分院檢察署置錄事，僱用。
 
-* 62 各級法院及分院已分配之事務，於本司法年度內尚未完結者，由各該受分配之庭或推事繼續完結之。
+* 72 第二十四條至第二十六條、第四十條至第四十二條、第五十四條至第五十六條之規定，於地方法院或其分院檢察署、高等法院或其分院檢察署、最高法院檢察署分別準用之。
 
-* 63 法庭開庭，於法院內為之。但法律別有規定者，不在此限。法院內開庭時，在法庭實施訴訟程序之公務員及依法執行職務之人、訴訟當事人與訴訟關係人，均應設置席位。除參與審判之推事或經審判長許可者外，在庭之人陳述時，起立，陳述後復坐。審判長蒞庭及宣示判決時，在庭之人均應起立。法庭席位佈置及旁聽規則，由司法院定之。
+* 73 地方法院或其分院檢察署之類別及員額，依附表之規定。各地方法院或其分院檢察署應適用之類別及其變更，由行政院定之。
 
-> 釋：一、第一項至第四項不修正。二、第五項配合審檢分隸修正。
+* 74 高等法院或其分院檢察署之類別及員額，依附表之規定。高等法院或其分院檢察署應適用之類別及其變更，由行政院定之。
 
-* 64 高等法院或地方法院於必要時，得在管轄區域內未設分院地方臨時開庭。前項情形，其推事除就本院推事中指派者外，在高等法院得以所屬分院或地方法院推事充之，在地方法院得以所屬分院推事充之。
+* 75 最高法院檢察署員額，依附表之規定。
 
-* 65 訴訟之辯論及裁判之宣示，應公開法庭行之。但有妨害公共秩序或善良風俗之虞時，經法院之決議，得不公開。
+* 76 檢察官得調度司法警察，法官於辦理刑事案件時，亦同。調度司法警察條例另定之。
 
-* 66 審判長於法庭之開閉及審理訴訟，有指揮之權。
+* 77 司法年度，每年自一月一日起至十二月三十一日止。
 
-* 67 法庭開庭時，審判長有維持秩序之權。
+* 78 各級法院及分院與各級法院及分院檢察署之處務規程，分別由司法院與法務部定之。
 
-* 68 法庭不公開時，審判長應將不公開之理由宣示。前項情形，審判長仍得允許無妨礙之人旁聽。
+* 79 各級法院及分院於每年度終結前，由院長、庭長、法官舉行會議，按照處務規程及其他法令規定，預定次年度司法事務之分配及代理次序。前項會議並應預定次年度關於合議審判時法官之配置。
 
-* 69 有妨害法庭執行職務或其他不當行為者，審判長除命退出法庭外，並得酌量情節輕重，分別為左列處分：一、命看管至閉庭時。二、處三日以下拘留或十圓以下罰鍰。
+* 80 前條會議，以院長為主席，其決議以過半數之意見定之，可否同數時，取決於主席。
 
-* 70 前條處分，不得聲明不服。
+* 81 事務分配、代理次序及合議審判時法官之配置，經預定後，因案件或法官增減或他項事故，有變更之必要時，得由院長徵詢有關庭長、法官意見後定之。
 
-* 71 律師在法庭代理訴訟或辯護案件，其言語、行動如有不當，審判長得加以警告或禁止其代理或辯護；非律師而為訴訟代理人或辯護人者亦同。
+* 82 地方法院及其分院法官因事故不能執行職務時，得由地方法院院長命候補法官暫代其職務。高等法院或地方法院法官因事故不能執行職務時，得由高等法院或地方法院院長調用其分院法官暫代其職務。高等法院及其分院法官因事故不能執行職務時，得由高等法院院長調用地方法院或其分院法官暫代其職務。最高法院法官因事故不能執行職務時，得由最高法院院長商調高等法院或其分院法官暫代其職務。前二項暫代其職務之期間，不得逾六個月。
 
-* 72 審判長為第六十九條或第七十一條之處分時，應記明其事由於筆錄。
+* 83 各級法院及分院應定期出版公報，刊載裁判書全文。
 
-* 73 推事及書記官在法庭執行職務時，應服制服；檢察官及律師在法庭執行職務時亦同。
+* 84 法庭開庭，於法院內為之。但法律別有規定者，不在此限。法院內開庭時，在法庭實施訴訟程序之公務員及依法執行職務之人、訴訟當事人與訴訟關係人，均應設置席位；其席位布置，應依當事人平等之原則為之。除參與審判之法官或經審判長許可者外，在庭之人陳述時，起立，陳述後復坐。審判長蒞庭及宣示判決時，在庭之人均應起立。法庭席位布置及旁聽規則，由司法院定之。
 
-* 74 法院為審判時，應用中國語言。
+* 85 高等法院以下各級法院或分院於必要時，得在管轄區域內指定地方臨時開庭。前項情形，其法官除就本院法官中指派者外，得以所屬分院或下級法院法官充之。第一項臨時開庭辦法，由司法院定之。
 
-* 75 訴訟當事人及證人、鑑定人等，如有不通中國語言者，由通譯傳譯之；其有不通推事所用語言者亦同。
+* 86 訴訟之辯論及裁判之宣示，應公開法庭行之。但有妨害國家安全、公共秩序或善良風俗之虞時，法院得決定不予公開。
 
-* 76 法院筆錄，應用中國文字。但有供參考之必要時，應附錄訴訟當事人或其他關係人所用之該地方言或外國語言。
+* 87 法庭不公開時，審判長應將不公開之理由宣示。前項情形，審判長仍得允許無妨礙之人旁聽。
 
-* 77 前三條之規定，於辦理檢察事務時準用之。
+* 88 審判長於法庭之開閉及審理訴訟，有指揮之權。
 
-* 78 合議裁判案件，應依本法所定推事人數評議決定之。
+* 89 法庭開庭時，審判長有維持秩序之權。
 
-* 79 裁判之評議，以審判長為主席。
+* 90 法庭開庭時，應保持肅靜，不得有大聲交談、鼓掌、攝影、吸煙、飲食物品及其他類似之行為。非經審判長核准，並不得錄音。前項錄音辦法，由司法院定之。
 
-* 80 裁判之評議，均不公開。
+* 91 有妨害法庭秩序或其他不當行為者，審判長得禁止其進入法庭或命其退出法庭，必要時得命看管至閉庭時。前項處分，不得聲明不服。前二項之規定，於審判長在法庭外執行職務時準用之。
 
-* 81 評議時推事應各陳述意見，其次序以資淺者為先，資同以年少者為先，遞至審判長為終。
+* 92 律師在法庭代理訴訟或辯護案件，其言語行動如有不當，審判長得加以警告或禁止其開庭當日之代理或辯護。非律師而為訴訟代理人或辯護人者，亦同。
 
-* 82 評議以過半數之意見決定之。關於金額，如推事之意見分三說以上，各不達過半數時，以最多額之意見，順次算入次多額之意見，至達過半數為止。關於刑事，如推事之意見分三說以上，各不達過半數時，以最不利於被告之意見，順次算入次不利於被告之意見，至達過半數為止。
+* 93 審判長為前二條之處分時，應記明其事由於筆錄。
 
-* 83 評議時各推事之意見，應記載於評議簿，但應嚴守秘密。
+* 94 第八十四條至第九十三條有關審判長之規定，於受命法官、受託法官執行職務時準用之。
 
-* 84 法院處理事務，應互相協助。
+* 95 違反審判長、受命法官、受託法官所發維持法庭秩序之命令，致妨害法院執行職務，經制止不聽者，處三月以下有期徒刑、拘役或三千元以下罰金。
 
-* 85 檢察官執行職務，應互相協助。
+* 96 法官及書記官在法庭執行職務時，應服制服，檢察官、公設辯護人及律師在法庭執行職務時，亦同。前項人員之服制，由司法院會同行政院定之。
 
-* 86 書記官於權限內之事務，應互相協助；執達員亦同。
+* 97 法院為審判時，應用國語。
 
-* 87 各級法院行政之監督，依左列之規定：一、司法院院長監督各級法院及分院。二、最高法院院長監督該法院。三、高等法院院長監督該法院及其分院與所屬下級法院及其分院。四、高等法院分院院長監督該分院與所屬下級法院及其分院。五、地方法院院長監督該法院及其分院。六、地方法院分院院長監督該分院。各級檢察機關行政之監督，依左列之規定：一、法務部部長監督各級檢察機關。二、最高法院檢察署檢察長監督該檢察署，並監督全國檢察官。三、高等法院檢察處首席檢察官監督該檢察處及其分院檢察處與所屬下級法院及其分院檢察處。四、高等法院分院檢察處首席檢察官監督該檢察處與所屬下級法院及其分院檢察處。五、地方法院檢察處首席檢察官監督該檢察處及其分院檢察處。六、地方法院分院檢察處首席檢察官監督該檢察處。
+* 98 訴訟當事人、證人、鑑定人及其他有關係之人，如有不通國語者，由通譯傳譯之，其為聾啞之人，亦同。
 
-> 釋：一、審檢分隸後，將法院及檢察機關之行政監督，分列二項，予以規定。二、依原法院組織法，各級法院之行政監督，最高法院由司法院院長監督，高等法院以下各級法院由司法行政部部長監督。審檢分隸後，各級法院改由司法院院長監督。司法行政部改為法務部後檢察機關應由法務部部長監督。三、我國幅員廣大，地方法院及其分院分布全國各地，情況不一，故法院行政監督仍依現制，由高等法院院長監督該法院及其分院，與所屬下級法院及其分院。高等法院分院院長、地方法院院長，及地方法院分院院長之行政監督權，亦依此原則，類推辦理。四、最高法院檢察署檢察長為該署之首長，對該署自負監督之責；此外，本於檢察一體之規定，最高法院檢察署檢察長，對於檢察官事務並負監督全國檢察官之責。五、高等法院以下各級檢察機關配置於各級法院，分布於全國各地，高等法院檢察處首席檢察官，在一般行政事務方面，監督該檢察處，及其分院檢察處與所屬下級法院及其分院檢察處；在檢察官事務方面，並監督該區域內之檢察官。條文內定為監督該檢察處者，即兼含一般行政事務及檢察官事務之監督也。高等法院分院檢察處，與地方法院及其分院檢察處之監督，亦依此原則，類推辦理。
+* 99 訴訟文書應用中國文字。但有供參考之必要時，應附記所用之方言或外國語文。
 
-* 88 依前條規定有監督權者，對於被監督之人員得為左列處分：一、關於職務上之事項，得發命令使之注意。二、有廢弛職務，侵越權限或行止不檢者，加以警告。
+* 100 前三條之規定，於辦理檢察事務時準用之。
 
-* 89 被監督之人員如有前條第二款情事，而情節較重，或經警告不悛者，監督長官得依公務員懲戒法辦理。
+* 101 合議裁判案件，應依本法所定法官人數評議決定之。
 
-* 90 本章各條之規定，不影響於審判權之行使。
+* 102 裁判之評議，以審判長為主席。
 
-* 91 關於推事、檢察官、書記官、通譯之任用程序，除本法有規定者外，適用公務人員任用法之規定。關於法醫師、檢驗員之任用，適用技術人員任用條例之規定。本法自公布日施行。
+* 103 裁判之評議，均不公開。
+
+* 104 評議時法官應各陳述意見，其次序以資淺者為先，資同以年少者為先，遞至審判長為終。
+
+* 105 評議以過半數之意見決定之。關於數額，如法官之意見分三說以上，各不達過半數時，以最多額之意見順次算入次多額之意見，至達過半數為止。關於刑事，如法官之意見分三說以上，各不達過半數時，以最不利於被告之意見順次算入次不利於被告之意見，至達過半數為止。
+
+* 106 評議時各法官之意見應記載於評議簿，並於該案確定判決後，三年內應嚴守秘密。
+
+* 107 法院處理事務，應互相協助。
+
+* 108 檢察官執行職務，應互相協助。
+
+* 109 書記官於權限內之事務，應互相協助，觀護人、執達員、法警，亦同。
+
+* 110 各級法院行政之監督，依左列規定：一、司法院院長監督各級法院及分院。二、最高法院院長監督該法院。三、高等法院院長監督該法院及其分院與所屬地方法院及其分院。四、高等法院分院院長監督該分院與轄區內地方法院及其分院。五、地方法院院長監督該法院及其分院。六、地方法院分院院長監督該分院。
+
+* 111 各級法院檢察署行政之監督，依左列之規定：一、法務部部長監督各級法院及分院檢察署。二、最高法院檢察署檢察總長監督該檢察署。三、高等法院檢察署檢察長監督該檢察署及其分院檢察署與所屬地方法院及其分院檢察署。四、高等法院分院檢察署檢察長監督該檢察署與轄區內地方法院及其分院檢察署。五、地方法院檢察署檢察長監督該檢察署及其分院檢察署。六、地方法院分院檢察署檢察長監督該檢察署。
+
+* 112 依前二條規定有監督權者，對於被監督之人員得為左列處分：一、關於職務上之事項，得發命令使之注意。二、有廢弛職務，侵越權限或行為不檢者，加以警告。
+
+* 113 被監督之人員，如有前條第二款情事，而情節較重或經警告不悛者，監督長官得依公務員懲戒法辦理。
+
+* 114 本章之規定，不影響審判權之行使。
+
+* 115 本法自公布日施行。
 
