刑事訴訟法 1990.7.17

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -638,11 +638,17 @@
 
 * 307 第三百零二條至第三百零四條之判決，得不經言詞辯論為之。
 
-* 308 判決書應分別記載其裁判之主文、事實與理由。
+* 308 判決書應分別記載裁判之主文與理由；有罪之判決書並應記載事實。
+
+> 釋：有罪判決固應將犯罪事實與理由分別記載，俾使人瞭解判決確定力之範圍。惟刑式判決及無罪判決並無犯罪事實，僅應記載主文及理由，爰予修正。
 
 * 309 有罪之判決書，應於主文內載明所犯之罪，並分別情形，記載左列事項：一、諭知之主刑、從刑或刑之免除。二、諭知六月以下有期徒刑或拘役者，如易科罰金，其折算之標準。三、諭知罰金者，如易服勞役，其折算之標準。四、諭知易以訓誡者，其諭知。五、諭知緩刑者，其緩刑之期間。六、諭知保安處分者，其處分及期間。
 
 * 310 有罪之判決書，應於理由內分別情形記載左列事項：一、認定犯罪事實所憑之證據及其認定之理由。二、對於被告有利之證據不採納者，其理由。三、科刑時就刑法第五十七條或第五十八條規定事項所審酌之情形。四、刑罰有加重、減輕或免除者，其理由。五、易以訓誡或緩刑者，其理由。六、諭知保安處分者，其理由。七、適用之法律。
+
+* 310.1 有罪判決，諭知六月以下有期徒刑或拘役得易科罰金、罰金或免刑者，其判決書得僅記載判決主文、犯罪事實及證據與其認定之理由、應適用之法條。前項判決，法院認定之犯罪事實與起訴書之記載相同者，得引用之。
+
+> 釋：裁判書類之製作每每耗費推事甚多精力，有罪判決中諭知免刑或緩刑、或科處罰金、六月以下有期徒刑或拘役得易科罰金者，當事人常均甘服而無爭，其判決書之記載允宜予以簡化，並得引用起訴書所記載之事實，以確定其既判力之範圍，而節省推事之時間、精力，使其專心致力於較複雜之案件，必有利於司法之革新。
 
 * 311 宣示判決，應自辯論終結之日起七日內為之。
 
@@ -924,15 +930,27 @@
 
 * 450 以簡易判決處刑時，得併科沒收或為其他必要之處分。第二百九十九條第一項但書之規定，於前項判決準用之。
 
-* 451 檢察官偵查刑法第六十一條所列各罪之案件時，審酌情節認為宜以簡易判決處刑者，應即以書面為聲請。第二百六十四條之規定，於前項聲請準用之。第一項聲請，與起訴有同一之效力。
+* 451 檢察官偵查刑法第六十一條所列各罪之案件時，審酌情節認為宜以簡易判決處刑者，應即以書面為聲請。第二百六十四條之規定，於前項聲請準用之。第一項聲請，與起訴有同一之效力。被告於偵查中自白者，得請求檢察官為第一項之聲請。檢察官依通常程序起訴之案件，經法院訊問被告，認為宜以簡易判決處刑者，於徵得檢察官及被告同意後，得以簡易判決處刑。前項檢察官之同意，視為第一項之聲請。
+
+> 釋：為擴大簡易程序之適用，一方面賦予被告聲請檢察官為簡易判決處刑之聲請權，惟以被告於偵查中自白者為限，將之增列為第四項。另一方面檢察官依通常公訴程序起訴後，法院審酌情節認為宜以簡易判決處刑者亦賦法院得行簡易程序，惟此時應得檢察官及被告之同意，以維護當事人之權益；並視為檢察官已為簡易判決處刑之聲請。爰將此列為第五項、第六項。
+
+* 451.1 前條第一項之案件，被告於偵查中自白者，得向檢察官表示願受科刑之範圍，檢察官得以被告之表示為基礎，向法院為具體之求刑。被告自白犯罪未為前項之表示者，在審判中得向法院為之，檢察官亦得向法院為具體之求刑。
+
+> 釋：為落實簡易程序之簡易可行，允宜賦被告於偵查中及審判中表示願受科刑範圍之機會，檢察官亦得為具體之求刑，並於法院依其所請科刑後限制其上訴權（第四百五十五條之一第二項）。
 
 * 452 檢察官聲請以簡易判決處刑案件，經法院認為不得或不宜以簡易判決處刑者，應適用通常程序審判之。
 
 * 453 以簡易判決處刑案件，法院應立即處分。
 
-* 454 簡易判決，應記載左列事項：一、第五十一條第一項之記載。二、犯罪之事實及證據與其認定之理由。三、應適用之法條。四、第三百零九條各款所列事項。五、自簡易判決送達之日起十日內，得提起上訴之曉示。
+* 454 簡易判決，應記載左列事項：一、第五十一條第一項之記載。二、犯罪之事實及證據。三、應適用之法條。四、第三百零九條各款所列事項。五、自簡易判決送達之日起十日內，得提起上訴之曉示。但不得上訴者，不在此限。前項判決書，得以簡略方式為之，第二款之犯罪事實得引用檢察官聲請簡易判決處刑書或起訴書之記載，證據得僅列舉證據之標目。
+
+> 釋：一、簡易程序原在求其便捷，除不經通常審判程序外，判決書之製作，亦應力求簡化，始能發揮其簡易功能。本條原條文規定與一般正式判決大同小異，未能減少推事之負荷，成效自屬不彰。且第四百四十九條第二項規定，既已明定簡易判決所科之刑，以拘役或罰金為限，罪證明確，似無再於判決中記載「認定之理由」之必要，爰將第二款之「與其認定之理由」七字刪除。二、法院依被告所表示願受科刑之範圍或檢察官具體之求刑範圍判決者，依第四百五十五條之一規定不得上訴，爰於第一項第五款增列「但不得上訴者不在此限。」三、為進一步簡化簡易判決之記載，爰仿照日本刑事訴訟規則第二百十八條及第二百十八條之二之例，犯罪事實得引用檢察官聲請簡易判決處刑書或起訴書之記載，證據則得列舉證據標目，並均得以簡略方式為之。
 
 * 455 書記官接受簡易判決原本後，應立即制作正本送達於當事人。
+
+* 455.1 對於簡易判決有不服者，得上訴於管轄之第二審地方法院合議庭。依第四百五十一之一之請求所為之科刑判決，不得上訴。第一項之上訴，準用第三編第一章及第二章之規定。對於適用簡易程序案件所為裁定有不服者，得抗告於管轄之第二審地方法院合議庭。前項之抗告，準用第四編之規定。
+
+> 釋：一、對於簡易判決不服者，規定由地方法院合議庭審判，以減輕高等法院之負荷，並與民事訴訟簡易訴訟程序之上訴係由地方法院合議庭審判之修正案相為配合。二、為加強運用簡易程序，當事人依第四百五十一條之一表示願受科刑範圍或求刑範圍內科刑者，各該當事人允宜不得上訴。三、對簡易判決不服上訴者，其程序允宜增設準用之規定，以資明確。
 
 * 456 裁判除關於保安處分者外，於確定後執行之。但有特別規定者，不在此限。
 
