民事訴訟法 1990.7.17

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -818,21 +818,29 @@
 
 * 402 外國法院之確定判決，有左列各款情形之一者，不認其效力：一、依中華民國之法律，外國法院無管轄權者。二、敗訴之一造，為中華民國人而未應訴者。但開始訴訟所需之通知或命令已在該國送達本人，或依中華民國法律上之協助送達者，不在此限。三、外國法院之判決，有背公共秩序或善良風俗者。四、無國際相互之承認者。
 
-* 403 第四百二十七條第一項及第二項所定之訴訟，於起訴前，應經法院調解。但有左列各款情形之一者，不在此限：一、依法律關係之性質、當事人之狀況或其他情事，可認為不能調解或調解顯無成立之望者。二、經法定其他調解機關調解未成立者。三、因票據涉訟者。四、係提起反訴者。五、送達於被告之通知書，應為公示送達或於外國為送達者。自法院或其他調解機關調解不成立時起，已經過一年者，於起訴前，應再經調解。
+* 403 第四百二十七條第一項及第二項所定之訴訟，於起訴前，應經法院調解。但有左列各款情形之一者，不在此限：一、依法律關係之性質、當事人之狀況或其他情事可認為不能調解或調解顯無成立之望者。二、經法定其他調解機關調解未成立者。三、因票據涉訟者。四、係提起反訴者。五、送達於他造之通知書，應為公示送達或於外國為送達者。
+
+> 釋：一、第一項但書第五款之「被告」修正為「他造」，以免誤認調解事件為訴訟事件，並與以後條文用語一致。二、曾經調解而不成立時，縱再強制調解，亦難期成立，故刪除原條文第二項。
 
 * 404 不合於前條規定之訴訟，當事人亦得於起訴前，聲請調解。有適用簡易程序之合意，而當事人逕行起訴者，經他造抗辯後，視其起訴為調解之聲請。
 
 * 405 調解，依當事人之聲請行之。前項聲請，應表明為調解標的之法律關係及爭議之情形。聲請調解之管轄法院，準用第一編第一章第一節之規定。
 
-* 406 法院認調解之聲請，有第四百零三條第一項但書各款所定情形之一者，得逕以裁定駁回之。前項裁定，不得聲明不服。
+* 406 法院認調解之聲請有第四百零三條但書各款所定情形之一者，得逕以裁定駁回之。前項裁定，不得聲明不服。
+
+> 釋：第四百零三條第二項已刪除，爰將「第四百零三條第一項但書」修正為「第四百零三條但書」。
 
 * 407 法院除駁回調解之聲請外，應速定調解期日，將聲請書狀或言詞聲請之筆錄與期日之通知書，於調解期日前，一併送達於他造。第四百十一條第一項之規定，應於前項通知書內記載之。第四百三十二條之規定，於調解程序準用之。
 
 * 408 法院於必要時，得命當事人或法定代理人本人於調解期日到場。
 
-* 409 當事人無正當理由不於調解期日到場者，法院得以裁定科五十元以下之罰鍰；其有代理人到場而本人無正當理由不從前條之命者亦同。前項裁定得為抗告，抗告中應停止執行。
+* 409 當事人無正當理由不於調解期日到場者，法院得以裁定科一千元以下之罰鍰；其有代理人到場而本人無正當理由不從前條之命者亦同。前項裁定得為抗告，抗告中應停止執行。
 
-* 410 調解程序，由調解推事於法院行之，不用開庭之形式，得不公開。
+> 釋：為強化調解，發揮其疏減訟源之功能，有強制當事人到場之必要，而原定條文對不到場當事人之處罰太輕，難收強制到場之效，爰提高罰鍰為一千元。
+
+* 410 調解程序由調解推事於法院行之，於必要時，亦得於其他適當處所行之。前項調解，不用開庭之形式，得不公開。
+
+> 釋：一、本條於原文「法院」下增入「於必要時，亦得於其他適當處所行之」，俾與本法第一百五十七條意旨一致。二、本條原條文後段移列為第二項。
 
 * 411 當事人兩造各得推舉一人至三人為調解人，於期日到場，協同調解。兩造之調解人應為同數。不問當事人有無推舉調解人，如法院認有第三人適於協同調解時，得選任為調解人。第三百二十三條之規定，於前項調解人準用之。法院選任之調解人，應通知其於期日到場；當事人推舉之調解人，經預行陳明法院者亦同。
 
@@ -844,17 +852,27 @@
 
 * 415 推事行調解時，得暫行退席，囑付調解人先行勸解，將其結果由調解人報告推事，推事接受報告後，應即出席調解。
 
-* 416 調解經當事人合意而成立；調解成立者，與訴訟上和解有同一之效力。調解有無效或得撤銷之原因者，當事人得向原法院提起宣告調解無效或撤銷調解之訴。法院依前項規定，宣告調解無效或撤銷調解時，並得就原聲請調解之事件為裁判。第五百條及第五百零二條之規定，於第二項情形準用之。調解不成立者，法院應付與當事人證明書。
+* 416 調解經當事人合意而成立；調解成立者，與訴訟上和解有同一之效力。調解有無效或得撤銷之原因者，當事人得向原法院提起宣告調解無效或撤銷調解之訴。前項情形，原調解事件之聲請人，得就原調解事件合併起訴或提起反訴，請求法院於宣告調解無效或撤銷調解時，合併裁判之。第五百條、第五百零二條及第五百零六條之規定，於第二項情形準用之。調解不成立者，法院應付與當事人證明書。
 
-* 417 關於財產權爭議之調解，當事人不能合意但已甚接近者，調解推事得徵詢調解人之意見，斟酌一切情形，求兩造利益之平衡，於不違反兩造當事人之主要意思範圍內，以職權為解決事件適當之裁定。
+> 釋：一、原條文第三項欠明確，而提起宣告調解無效或撤銷調解之訴之原告，如為原調解事件之聲請人者，自得合併起訴；如為原調解事件之相對人者，則原聲請人可於其程序中提起反訴，以便一次解決糾紛，符合訴訟經濟之原則，爰將本條第三項修正。二、提起調解無效或撤銷調解之訴，猶如對於確定判決之提起再審之訴，有關再審之規定自有準用之餘地。原條文第四項僅定準用第五百條及第五百零二條尚有未足，爰增訂準用第五百零六條，以保護善意第三人之權益。
 
-* 418 當事人或利害關係人，對於前條之裁定，得於裁定送達於當事人翌日起十日內，提出異議。於前項期間內提出異議者，前條裁定，失其效力，並視為調解不成立；其未於前項期間內提出異議者，前條裁定，視為調解成立。第一項之異議，法院應通知兩造當事人。
+* 417 關於財產權爭議之調解，當事人不能合意但已甚接近者，調解推事應斟酌一切情形，其有調解人者，並應徵詢調解人之意見，求兩造利益之平衡，於不違反兩造當事人之主要意思範圍內，以職權提出解決事件之方案。前項方案，應送達於當事人及參加調解之利害關係人。
 
-* 419 當事人兩造於期日到場而調解不成立者，法院得依一造當事人之聲請，命即為訴訟之辯論。但他造如聲請延展期日者，應許可之。前項情形，視為調解之聲請人，自聲請時已經起訴。當事人之一造有第一項聲請者，法院不得為第四百十七條之裁定。
+> 釋：一、本條原係參考民法第一百五十三條第二項及日本民事調停法第十七條之規定所增訂，以加強調解制度。惟實務上鮮少運用，致功效未著，爰將原條文「得」字修正為「應」字；並仿日本公害紛爭處理法第三十四條規定，將「裁定」改為「方案」，以發揮調解制度之功能。二、為使當事人等對調解方案得以提出異議，爰增設第二項規定，調解方案應送達於當事人及參加調解之利害關係人。
+
+* 418 當事人或參加調解之利害關係人對於前條之方案，得於送達後十日之不變期間內，提出異議。於前項期間內提出異議者，視為調解不成立；其未於前項期間內提出異議者，視為已依該方案成立調解。第一項之異議，法院應通知當事人及參加調解之利害關係人。
+
+> 釋：一、為配合前條規定，將「裁定」改為「方案」，且提起異議之期間，係不變期間為表明其性質，於原條文「十日」之下加「不變期間」四字。又在該期間內得提出異議者，應限於當事人及參加調解之利害關係人，爰將原條文「利害關係人」修正為「參加調解之利害關係人」，以杜爭議。二、第二項亦配合前條規定而為修正，「裁定」改為「方案」。三、對於第一項之「方案」提出異議，直接影響調解是否成立，因之，法院對第一項之異議，法院除應通知當事人外，自尚應通知參與調解之利害關係人，爰於第三項增列「參加調解之利害關係人」。
+
+* 419 當事人兩造於期日到場而調解不成立者，法院得依一造當事人之聲請，命即為訴訟之辯論。但他造如聲請延展期日者，應許可之。當事人聲請調解而不成立，如聲請人於調解不成立證明書送達後十日之不變期間內起訴者，視為自聲請調解時，已經起訴。其於送達前起訴者，亦同。以起訴視為調解之聲請者，如調解不成立，除當事人聲請延展期日外，法院應即為訴訟之辯論，並仍自原起訴時，發生訴訟繫屬之效力。
+
+> 釋：一、當事人聲請調解，兩造均於期日到場而調解不成立，當事人未聲請即為訴訟之辯論，或因當事人兩造或一造於期日不到場，視為調解不成立之情形，為免影響當事人之形成權除斥期間之遵守與請求權時效期間之中斷，爰於第二項規定，如聲請人於調解不成立證明書送達後十日之不變期間內起訴者，視為自聲請調解時，已經起訴，其於送達前起訴者亦同。二、在以起訴視為調解聲請之事件，例如第四百零四條第二項、第四百二十四條第二項及第五百十九條第一項之情形，原係起訴事件，僅因法律規定視為調解之聲請而依調解程序進行，故如調解不成立時，原起訴之效力應即恢復，亦即仍自原起訴時發生訴訟繫屬之效力，此時不必再繳裁判費，並可兼顧時效期間之中斷及除斥期間之遵守。惟因法院所訂之期日，原為調解期日，並非言詞辯論期日，當事人未必已為言詞辯論之準備，因此當事人於調解期日到場，因調解不成立，若有聲請延展期日時，法院應准許之，不可依一造之聲請命為一造辯論判決。
 
 * 420 當事人兩造或一造於期日不到場者，法院酌量情形，得視為調解不成立或另定調解期日。
 
-* 421 法院書記官應作調解程序筆錄，記載調解之成立或不成立及期日之延展或訴訟之辯論。第四百十七條之裁定，經調解推事當場宣示者，應一併記載於筆錄。調解成立者，應於十日內以筆錄正本，送達於當事人及參加調解之利害關係人。第二百十二條至第二百十九條之規定，於第一項、第二項筆錄準用之。
+* 421 法院書記官應作調解程序筆錄，記載調解之成立或不成立及期日之延展或訴訟之辯論。第四百十七條之解決事件之方案，經調解推事當場宣示者，應一併記載於筆錄。調解成立者，應於十日內以筆錄正本，送達於當事人及參加調解之利害關係人。第二百十二條至第二百十九條之規定，於第一項、第二項筆錄準用之。
+
+> 釋：第二項規定配合第四百十七條之修正，將「裁定」改為「解決事件之方案」。
 
 * 422 調解程序中，調解推事所為之勸導及當事人所為之陳述或讓步，於調解不成立後起訴者，不得採為裁判之基礎。
 
@@ -864,9 +882,13 @@
 
 * 425 調解之聲請經撤回者，視為未聲請調解。但聲請人應負擔因聲請所生之全部費用。
 
-* 426 調解推事、書記官、及調解人，對於經辦調解事件，應保守秘密。
+* 426 調解推事、書記官及調解人因經辦調解事件，知悉他人職務上、業務上之秘密或其他涉及個人隱私之事項，應保守秘密。
 
-* 427 關於財產權之訴訟，其標的之金額或價額在二千元以下者，適用本章所定之簡易程序。左列各款訴訟，不問其標的金額或價額，一律適用簡易程序：一、出租人與承租人間，因接收房屋或遷讓、使用、修繕或因留置承租人之家具、物品涉訟者。二、僱用人與受僱人間，因僱傭契約涉訟，其僱傭期間在一年以下者。三、旅客與旅館主人、飲食店主人或運送人間，因食宿，運送費或因寄存行李、財物涉訟者。四、因請求保護占有涉訟者。五、因定不動產之界線或設置界標涉訟者。不合於前二項規定之訴訟，得以當事人之合意，適用簡易程序。
+> 釋：調解事件雖偶有涉及當事人隱私，有不足為外人道之情形，惟原條文規定，稍嫌籠統，不易執行。且調解事件經調解不成立視為起訴後，則以公開審判為原則，故保密之範圍，應酌予限制，爰修正之。
+
+* 427 關於財產權之訴訟，其標的之金額或價額在第四百六十六條所定之上訴利益額數以下者，適用本章所定之簡易程序。左列各款訴訟，不問其標的金額或價額一律適用簡易程序：一、因房屋定期租賃或定期借貸關係所生之爭執涉訟者。二、僱用人與受僱人間，因僱傭契約涉訟，其僱傭期間在一年以下者。三、旅客與旅館主人、飲食店主人或運送人間，因食宿、運送費或因寄存行李、財物涉訟者。四、因請求保護占有涉訟者。五、因定不動產之界線或設置界標涉訟者。六、本於票據有所請求而涉訟者。七、本於合會有所請求而涉訟者。八、因利息、紅利、租金、贍養費、退職金及其他定期給付涉訟者。不合於前二項規定之訴訟，得以當事人之合意，適用簡易程序。第二項之訴訟，案情繁雜者，得依當事人聲請，並經法院認為適當時，以裁定改用通常訴訟程序。但足致訴訟程序延滯者，不在此限。前項裁定，不得聲明不服。
+
+> 釋：一、關於適用簡易訴訟程序之訴訟標的金額或價額，為配合社會經濟之實際狀況，並與通常訴訟程序上訴第三審之限制相呼應，以避免將來修正其上訴第三審金額時再修正之煩，爰於第四百二十七條第一項將適用簡易訴訟程序之訴訟標的金額或價額修正為在第四百六十六條所定之上訴利益額數以下，以資因應。二、房屋定期租賃關係所生之訴訟，本質上較為單純，為擴大簡易訴訟程序適用之機會與範圍就定期之房屋租賃及借貸訴訟均得適用簡易程序。三、因票據爭執所生之訴訟以早日終結為宜，且票據係無因證券，得抗辯之事由較少，爰將票據案件列為適用簡易程序。四、合會在我國民間習慣上，已存在多年，部分銀行並有此類業務，最高法院就此並著有判例，為求此類訴訟案件速結，爰併列於簡易程序中。五、利息等定期給付訴訟，法律性質簡易，消減時效期間較短，爰列入簡易訴訟程序，以求速結。六、第二項所定之訴訟事件，案情大抵較為單純，爭執亦可能不大，故行速審速結之簡易程序，惟如案情繁雜之訴訟事件，亦一概適用簡易程序或有欲速不達之弊，故新增第四項，規定此等訴訟得依當事人聲請，並經法院認為適當時，以裁定改用通常訴訟程序，但足致訴訟程序延滯者，不在此限。七、訴訟程序由簡易程序改為通常訴訟程序，係為求訴訟之妥適進行，為免影響程序之安定及延滯訴訟，新增第五項，規定此等裁定，不得聲明不服。
 
 * 428 起訴及其他期日外之聲明或陳述，概得以言詞為之。
 
@@ -880,11 +902,55 @@
 
 * 433 通知證人或鑑定人，得不送達通知書，依法院認為便宜之方法行之。但證人或鑑定人如不於期日到場，仍應送達通知書。法院得命證人或鑑定人於法院外以書狀為陳述。但以預料其陳述可信者為限。前項情形，應令證人或鑑定人具結，附於書狀提出。
 
-* 434 判決書內之事實及理由，得僅記載要領。
+* 433.1 簡易訴訟程序事件，法院應以一次期日辯論終結為原則。
 
-* 435 第四百二十七條第一項之訴，因訴之變更致訴訟標的之金額或價額逾二千元者，除經當事人合意外，其辯論及裁判不得依簡易程序之規定；追加之新訴或反訴，其訴訟標的之金額或價額逾二千元，而以原訴與之合併辯論及裁判者亦同。
+> 釋：為求從速終結，減輕人民訟累，故增本條。
+
+* 433.2 言詞辯論筆錄，經法院之許可，得省略應記載之事項。但當事人有異議者，不在此限。前項規定，於言詞辯論程式之遵守、和解、認諾、捨棄、撤回、自認及裁判之宣示，不適用之。
+
+> 釋：一、為減輕書記官之負擔，故將簡易程序之言詞辯論筆錄簡化，增設本條第一項規定。二、言詞辯論時，有關程式之遵守、和解、認諾、捨棄、撤回、自認及裁判之宣示，對當事人權益影響頗大，爰於第二項規定，仍應記載於言詞辯論筆錄，俾有依據。
+
+* 433.3 言詞辯論期日，當事人之一造不到場者，法院得依職權由一造辯論而為判決。
+
+> 釋：簡易訴訟程序宜從速終結，爰增列本條，規定當事人之一造不到場，法院即得依職權命一造辯論而為判決，以資因應。
+
+* 434 判決書內之事實及理由，得合併記載其要領。法院亦得於宣示判決時，命將判決主文、所裁判之訴訟標的及其理由要領，記載於言詞辯論筆錄，不另作判決書；其筆錄正本或節本之送達，與判決正本之送達，有同一之效力。第二百三十條之規定，於前項筆錄準用之。
+
+> 釋：一、將判決書之事實及理由分項記載，實務上常導致事實項下及理由項下重複記載情形，不符訴訟經濟原則，爰於本條第一項規定判決書內之事實及理由得合併記載其要領，以簡化簡易訴訟程序之判決書。二、依現行法規定，法院就簡易程序之判決，仍需制作冗長判決書，為使法院判決亦能配合程序之簡易迅速，增訂本條第二項。三、前項既以言詞辯論筆錄代替判決書，則關於判決書正本或節本有關法院書記官簽名，並蓋法院印之規定，自應準用於言詞辯論筆錄正本與節本，故增設第三項規定。
+
+* 435 因訴之合併、變更、追加或提起反訴，致其訴之全部或一部，不屬第四百二十七條第一項及第二項之範圍者，除經當事人合意外，其辯論及裁判，不得依簡易程序之規定。
+
+> 釋：簡易訴訟程序事件，或因訟爭利益額較少，或因事件性質之簡易，有從速終結之必要與可能，為節勞費而有簡易訴訟程序之設，其原則上二審終結，非具特別條件不得向最高法院提起上訴或抗告，此與通常訴訟程序有別，故因訴之合併、變更、追加或提起反訴，致訴訟事件非屬簡易訴訟程序之範疇，原則上仍應依通常訴訟程序，爰設本規定，俾資準繩。又在高等法院審理之第二審程序中，當事人為訴之變更、追加或提起反訴，致事件屬於第四百二十七條第一項或第二項之範圍時，因高等法院之第二審程序並無適用簡易訴訟程序之規定，故該事件雖由通常訴訟事件變為簡易訴訟事件，但訴訟程序仍屬通常訴訟程序，並不因之變為簡易訴訟程序；該事件經高等法院第二審判決後，依第四百六十六條第四項之規定，仍不得向最高法院提起第三審上訴。
 
 * 436 簡易訴訟程序，在獨任推事前行之。簡易訴訟程序，除本章別有規定外，仍適用第一章通常訴訟程序之規定。
+
+* 436.1 對於簡易程序獨任推事所為之裁判，得上訴或抗告於管轄之地方法院，其審判以合議行之。當事人於前項上訴程序，為訴之變更、追加或提起反訴，致應適用通常訴訟程序者，不得為之。第一項之上訴及抗告程序，準用第三編第一章及第四編之規定。
+
+> 釋：對於獨任推事依簡易訴訟程序而為之裁判，聲明不服者，規定由地方法院合議庭審判，以減輕高等法院之負擔。且為期與本法第四百三十七條上訴第二審及第四百六十四條上訴第三審之用語一致，爰於地方法院上加列「管轄」兩字。於簡易事件之第二審上訴程序中，因訴之變更、追加或提起反訴，致應適用通常訴訟程序者，為免影響當事人之審級利益及簡易程序速審速結之特質，均不得為之。簡易訴訟程序之第二審，雖由地方法院合議庭審判，仍屬簡易訴訟程序，而非通常訴訟程序之第二審，自宜另設明文規定，爰於本條第三項規定其上訴及抗告程序，準用第三編第一章及第四編之規定，俾資明確。
+
+* 436.2 對於第四百二十七條第二項條簡易訴訟程序之第二審裁判，其上訴利益逾第四百六十六條所定之額數者，當事人僅得以其適用法規顯有錯誤為理由，逕向最高法院提起上訴或抗告。前項上訴及抗告，除別有規定外，仍適用第三編第二章第三審程序、第四編抗告程序之規定。
+
+> 釋：為貫徹最高法院法律審之精神，並求裁判上法律見解之統一，特增設本條規定，就第四百二十七條第二項簡易訴訟程序之第二審裁判，其上訴利益逾第四百六十六條所定之額數者，使當事人得逕向最高法院提起第三審上訴或抗告，惟限制以原裁判適用法規顯有錯誤為理由，始得為之。簡易訴訟程序與通常訴訟程序之第三審均為法律審，故有關通常訴訟程序之第三審上訴及抗告之規定，除與簡易訴訟程序之性質不相容之部分，本編已自行規定者外，其餘規定，仍可適用於簡易訴訟程序之上訴及抗告。
+
+* 436.3 對於簡易訴訟程序之第二審裁判，提起第三審上訴或抗告，須經原裁判法院之許可。前項許可，以訴訟事件所涉及之法律見解具有原則上之重要性者為限。第一項之上訴或抗告，為裁判之原法院認為應行許可者，應添具意見書，敘明合於前項規定之理由，逕將卷宗送最高法院；認為不應許可者，應以裁定駁回其上訴或抗告。前項裁定，得逕向最高法院抗告。
+
+> 釋：一、對於簡易訴訟程序之第二裁判，雖僅以其適用法規顯有錯誤為限，當事人得逕向最高法院提起上訴或抗告，惟為免當事人任意提起第三審上訴或抗告，爰增設由原裁判法院許可之限制。二、簡易程序之第三審上訴或抗告，既在求裁判上法律見解之統一，則原法院之許可上訴或抗告，應以該事件所涉及之法律見解具有原則上之重要性者為限，所謂原則上之重要性，指該訴訟事件所涉及之法律問題意義重大而有加以闡釋之必要而言。三、當事人就訴訟事件提起第三審上訴或抗告時，該訴訟事件所涉及之法律見解是否具有原則上之重要性，自以為裁判之原法院知之最詳，如原法院認為應許可上訴或抗告者，由其就此添具意見書，除可減輕最高法院之負擔外，並可免濫行上訴之弊，又原法院認為不應許可第三審上訴或抗告者，規定以裁定駁回上訴或抗告，俾資依據。四、原法院認不應許可上訴或抗告，而以裁定駁回時，為維護當事人之權益，規定得逕向最高法院提起抗告。
+
+* 436.4 依第四百三十六條之二第一項提起上訴或抗告者，應同時表明上訴或抗告理由；其於裁判宣示後送達前提起上訴或抗告者，應於裁判送達後十日內補具之。未依前項規定表明上訴或抗告理由者，毋庸命其補正，由原法院裁定駁回之。
+
+> 釋：一、簡易訴訟程序，原則上不得提起第三審上訴或抗告，僅於例外情形經最高法院許可者，始得為第三審上訴或抗告，惟許可上訴或抗告與否，係屬第三審上訴法院之職權，上訴人或抗告人一經提起上訴或抗告，最高法院即應依職權審核上訴或抗告應否許可，無另由上訴人或抗告人另為聲請許可之必要，故當事人僅對原裁判有提起上訴或抗告之行為即可。又簡易訴訟程序之第三審上訴或抗告，以原裁判適用法規顯有錯誤暨訴訟事件所涉及之法律見解具有原則上重要性者始得為之，因此，仍應責由上訴人或抗告人於提起上訴或抗告時，同時表明上訴或抗告理由，惟當事人於裁判宣示後，送達前已提起上訴或抗告時，則規定於裁判送達後十日內補具上訴或抗告理由即可。二、為免當事人利用上訴或抗告作為拖延訴訟之手段，第二項規定，對於未依前項規定表明上訴或抗告理由，原法院逕以裁定駁回即可，毋庸再命其補正。
+
+* 436.5 最高法院認上訴或抗告，不合第四百三十六條之二第一項及第四百三十六條之三第二項之規定而不應許可者，應以裁定駁回之。前項裁定，不得聲請再審。
+
+> 釋：一、當事人就簡易訴訟程序之第二審裁判，既僅於具有第四百三十六條之二第一項及第四百三十六條之三第二項所規定之情事，始得提起第三審上訴或抗告，則最高法院遇此類上訴或抗告，自應依職權審查是否具備此等要件，如認不合規定不應許可時，應即以裁定駁回之，如認應予許可則不必另為裁定，僅於終局裁判中予以說明即可。二、為免當事人於前項裁定確定後，一再聲請再審，影響當事人權益之安定性，於第二項規定，前項裁定，不得聲請再審。
+
+* 436.6 對於簡易訴訟程序之裁判，逕向最高法院提起上訴或抗告，經以上訴或抗告無理由為駁回之裁判者，不得更以同一理由提起再審之訴或聲請再審。
+
+> 釋：對於簡易訴訟程序之第二審裁判，當事人以原裁判適用法規顯有錯誤為理由，逕向最高法院提起上訴或抗告，經最高法院以其上訴或抗告無理由為駁回之裁判後，則原裁判適用法規是否顯有錯誤，已經最高法院加以審查。如尚許當事人就同一理由再依民事訴訟法第四百九十六條第一項第一款之規定提起再審之訴，或依第五百零七條之規定聲請再審，不僅徒增法院為不必要之重複認定，且易滋紛擾，爰規定不得更以同一理由提起再審之訴或聲請再審，以杜其弊。
+
+* 436.7 對於簡易訴訟程序之第二審確定終局裁判，如就足影響於裁判之重要證物，漏未斟酌者，亦得提起再審之訴或聲請再審。
+
+> 釋：對於簡易訴訟程序之第二審裁判，提起第三審上訴或抗告，須具備第四百三十六條之二第一項、第四百三十六條之三第二項規定之「適用法規顯有錯誤」與「具有原則上重要性」之要件，始得為之，漏未斟酌重要證物，與前述要件不同，如不另畀當事人以救濟之道，於其權益之保護，自嫌欠周，爰增列本條規定，以維護當事人之權益。至第四百九十六條至第四百九十八條以及其他有關再審條文之規定，除本章另規定外，仍在適用之列。
 
 * 437 對於第一審之終局判決，得上訴於管轄第二審之法院。
 
